--- a/QR/scss/base/_typography.scss
+++ b/QR/scss/base/_typography.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins';
+
 .regular-text {
     @include typography($font-family-primary, 0.938rem, 400, 140%, 0.2px);
     color: $slate-500-hsl;
