--- a/QR/scss/main.css
+++ b/QR/scss/main.css
@@ -81,4 +81,35 @@ body {
   min-height: 100vh;
 }
 
+.qr-card {
+  background-color: #ffffff;
+  padding: 1.5rem;
+  border-radius: 1.25rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  width: 320px;
+  height: 499px;
+  text-align: center;
+  padding: 1rem;
+}
+
+.qr-card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.qr-code-img {
+  width: 288px;
+  height: 288px;
+  border-radius: 0.625rem;
+}
+
+.qr-code-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 16.25rem;
+}
+
 /*# sourceMappingURL=main.css.map */
