--- a/Blog/scss/main.css
+++ b/Blog/scss/main.css
@@ -95,4 +95,14 @@ body {
   font-family: "Figtree", sans-serif;
 }
 
+.card-container {
+  background-color: #ffffff;
+  padding: 1.5rem;
+  border-radius: 1.25rem;
+  box-shadow: 20px 20px 19px 0px rgba(0, 0, 0, 0.2);
+  width: 275px;
+  height: 400px;
+  padding: 1.5rem;
+}
+
 /*# sourceMappingURL=main.css.map */
