--- a/Blog/scss/layout/_blog-preview-card.scss
+++ b/Blog/scss/layout/_blog-preview-card.scss
@@ -5,5 +5,49 @@
     box-shadow: 20px 20px 19px 0px rgba(0,0,0,0.2);
     width: 275px;
     height: 400px;
-    padding: 1.5rem;
+    padding: 1.8rem;
+    padding-bottom: 2.5rem;
+}
+
+.card-thumbnail {
+    border-radius: 0.625rem;
+    margin-bottom: $spacing-1;
+    width: 17.813rem;
+}
+
+.card-badge {
+    background-color: $yellow;
+    width: 73px;
+    height: 12px;
+    padding: 4px 4px 12px 4px;
+    border-radius: 4px;
+    text-align: center;
+    margin-bottom: $spacing-2;
+}
+
+.card-title {
+    margin-top: $spacing-2;
+    margin-bottom: $spacing-2;
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.card-title:hover {
+    color: $yellow;
+    transform: scale(1.05);
+}
+
+.card-author {
+    display: flex;
+    align-items: center;
+    margin-top: $spacing-2;
+}
+
+.card-author__avatar {
+    width: 25px;
+    height: 25px;
+}
+
+.card-author__name {
+    margin-left: .5rem;
+    color: $dark-gray-hsl;
 }
