Fixed mixin rule where font-size was not being used properly

--- a/Blog/scss/abstracts/_mixins.scss
+++ b/Blog/scss/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 // TYPOGRAPHY MIXIN
 @mixin typography($font-family-primary, $size, $weight, $line-height, $letter-spacing){
     font-family: $font-family-primary;
-    font-family: $size;
+    font-size: $size;
     font-weight: $weight;
     line-height: $line-height;
     letter-spacing: $letter-spacing;
